Fix Makefile, update .gitignore

--- a/latex/Makefile
+++ b/latex/Makefile
@@ -2,4 +2,4 @@ informe:
 		pdflatex -interaction nonstopmode -halt-on-error -file-line-error maindoc.tex && evince maindoc.pdf
 
 clean:
-		rm *.aux *.log *.toc maindoc.pdf
+		rm *.aux *.log *.toc 
