--- a/codigo/Makefile
+++ b/codigo/Makefile
@@ -2,7 +2,7 @@ export LC_ALL=C
 CXXFLAGS= -Wall -pedantic -g -ggdb
 LDFLAGS= -lpthread
 
-OBJS=main.o simu.o basesched.o basetask.o tasks.o sched_rr.o sched_fcfs.o sched_rr2.o sched_lottery.o
+OBJS=main.o simu.o basesched.o basetask.o tasks.o sched_rr.o sched_fcfs.o sched_rr2.o sched_lottery.o sched_lottery_base.o
 MAIN=simusched
 
 .PHONY: all
@@ -19,6 +19,7 @@ sched_fcfs.o: sched_fcfs.cpp sched_fcfs.h basesched.h
 sched_rr.o: sched_rr.cpp sched_rr.h basesched.h
 sched_rr2.o: sched_rr2.cpp sched_rr2.h basesched.h
 sched_lottery.o: sched_lottery.cpp sched_lottery.h basesched.h
+sched_lottery_base.o: sched_lottery_base.cpp sched_lottery_base.h basesched.h
 simu.o: simu.cpp simu.h basetask.h basesched.h
 simusched.o: simusched.cpp basetask.h basesched.h tasks.h
 tasks.o: tasks.cpp tasks.h basetask.h
